# askapsoft

./: .gitignore  CHANGES  COPYING  Header.template  bootstrap.ini  bootstrap.py  initenv.py  make_depends.py  yanda_packages.json
Code/Base/accessors/current/calibaccess/: CMakeLists.txt  CachedCalSolutionAccessor.cc  CachedCalSolutionAccessor.h  CalParamNameHelper.cc  CalParamNameHelper.h  CalibAccessFactory.cc  ChanAdapterCalSolutionConstAccessor.cc  ChanAdapterCalSolutionConstAccessor.h  ChanAdapterCalSolutionConstSource.cc  ChanAdapterCalSolutionConstSource.h  ICalSolutionAccessor.cc  ICalSolutionAccessor.h  ICalSolutionConstAccessor.cc  ICalSolutionConstAccessor.h  ICalSolutionFiller.h  JonesDTerm.cc  JonesDTerm.h  JonesIndex.cc  JonesIndex.h  JonesJTerm.cc  JonesJTerm.h  MemCalSolutionAccessor.cc  MemCalSolutionAccessor.h  ParsetCalSolutionAccessor.cc  ParsetCalSolutionAccessor.h  ServiceCalSolutionAccessorStub.cc  ServiceCalSolutionAccessorStub.h  ServiceCalSolutionSource.cc  ServiceCalSolutionSource.h  ServiceCalSolutionSourceStub.cc  ServiceCalSolutionSourceStub.h  TableCalSolutionConstSource.cc  TableCalSolutionConstSource.h  TableCalSolutionFiller.cc  TableCalSolutionFiller.h  TableCalSolutionSource.cc  TableCalSolutionSource.h
Code/Base/accessors/current/dataaccess/: BasicDataConverter.cc  BasicDataConverter.h  BestWPlaneDataAccessor.cc  BestWPlaneDataAccessor.h  CMakeLists.txt  DataAccessorAdapter.cc  DataAccessorAdapter.h  DataAccessorStub.cc  DataAccessorStub.h  DataAdapter.h  DataIteratorAdapter.cc  DataIteratorAdapter.h  DataIteratorStub.cc  DataIteratorStub.h  DirectionConverter.cc  DirectionConverter.h  DopplerConverter.cc  DopplerConverter.h  EpochConverter.cc  EpochConverter.h  FakeSingleStepIterator.cc  FakeSingleStepIterator.h  FeedSubtableHandler.cc  FeedSubtableHandler.h  FieldSubtableHandler.cc  FieldSubtableHandler.h  GenericConverter.h  IAntennaSubtableHandler.h  IBufferManager.h  IConstDataAccessor.h  IConstDataIterator.h  IConstDataSource.h  IConverterBase.h  IDataAccessor.h  IDataConverter.h  IDataConverterImpl.h  IDataIterator.h  IDataSelector.h  IDirectionConverter.h  IDopplerConverter.h  (+72 more)
Code/Base/accessors/current/imageaccess/: BeamLogger.cc  BeamLogger.h  CMakeLists.txt  CasaImageAccess.cc  CasaImageAccess.h  FITSImageRW.cc  FITSImageRW.h  FitsImageAccess.cc  FitsImageAccess.h  IImageAccess.cc  IImageAccess.h  ImageAccessFactory.cc
Code/Base/askap/current/: CMakeLists.txt  Jenkinsfile  SConstruct  askap_askap.h  dependencies.darwin  dependencies.default
Code/Base/askap/current/apps/: tAskapUtil.cc  tLog4cxxLogSink.cc  tLogAll.cc  tLogAll.log_cfg
Code/Base/askap/current/askap/: Application.cc  Application.h  AskapTestRunner.cc  AskapUtil.cc  AskapUtil.h  CMakeLists.txt  CasaSyncHelper.h  CasacoreFwdDefines.h  CircularBuffer.h  IndexConverter.cc  IndexConverter.h  Log4cxxLogSink.cc  Log4cxxLogSink.h  RangePartition.cc  RangePartition.h  StatReporter.cc  StatReporter.h
Code/Base/askap/current/cmake/: FindLOFAR.cmake  Findlog4cxx.cmake
Code/Base/askap/current/profile/: AskapProfiler.h  ProfileNode.cc  ProfileSingleton.h
Code/Base/askap/current/tests/askap/: AskapUtilTest.h  CircularBufferTest.h  IndexConverterTest.h  RangePartitionTest.h  taskap.cc
Code/Base/askapparallel/current/: CMakeLists.txt  askap_askapparallel.h  dependencies.azure-builder  dependencies.darwin  dependencies.default
Code/Base/askapparallel/current/askapparallel/: AskapParallel.cc  AskapParallel.h  CMakeLists.txt  MPIComms.cc  MPIComms.h
Code/Base/askapparallel/current/cmake/: FindAskap.cmake  FindBase.cmake  FindCasacore.cmake  FindLOFAR.cmake  FindLofarBlob.cmake  FindLofarCommon.cmake  cmake_install.cmake  cmake_uninstall.cmake
Code/Base/imagemath/current/: CMakeLists.txt  Jenkinsfile  SConstruct  askap_imagemath.h  dependencies.azure-builder  dependencies.default  doxy.conf  package.dox  package.info
Code/Base/imagemath/current/linmos/: LinmosAccumulator.h  LinmosAccumulator.tcc
Code/Base/imagemath/current/primarybeam/: GaussianPB.cc  GaussianPB.h  MWA_PB.cc  MWA_PB.h  PrimaryBeam.cc  PrimaryBeam.h  PrimaryBeamFactory.cc  PrimaryBeamFactory.h
Code/Base/imagemath/current/tests/primarybeam/: PrimaryBeamTest.h  tprimarybeam.cc
Code/Base/imagemath/current/utils/: ImagemathUtils.cc  ImagemathUtils.h
Code/Systems/cpapps/: dependencies.darwin  dependencies.default
Code/Systems/cpsvcs/: build.py  dependencies.default
Code/Systems/pipelines/: dependencies.ubuntu-bionic
Code/Systems/rialto/: dependencies.default
Tests/early_science_simulations/: runSimulations.sh
Tests/early_science_simulations/simulationScripts/: baseConfig.sh  config-ASKAP12.sh  config-ASKAP18-1MHz.sh  config-ASKAP18-1beam.sh  config-ASKAP18.sh  config-ASKAP24-1beam.sh  config-ASKAP30-1beam.sh  config-ASKAP36-1beam.sh  config.sh  makeInputModel.sh  makeSlices.sh  observeCalibrator.sh  observeScienceField.sh  setup.sh
Tests/hudson/CP/: askapcp_build.sh  data_challenge_1a.sh  ingest.sh  rialto_build.sh  solvers.sh  synthesis.sh
Tests/hudson/Documentation/: generate-docs.py
Tools/Dev/deploy/: ASKAPSDP-deploy.sh  README.md  RELEASE.cfg  askapcli.module-template  askappipeline.module-template  askapservices.module-template  askapsoft.module-template
Tools/Dev/deploy_azure/: README.md  askap-build.sh  build-provision.sh  buildit.sh  bundle.list  bundle.sh  cloud-init-test.txt  cloud-init.txt  create_build_vm.sh  create_run_vm.sh  launch_vm.sh  package.sh  provision.sh  run-provision.sh
Tools/Dev/deploy_docker/: Dockerfile
Tools/Dev/deploy_macOS/: bundle.py  bundle.sh  provision.sh
Tools/Dev/iotest/: README
Tools/Dev/rbuild/: setup.py
Tools/Dev/testutils/: AskapTestRunner.h  SConstruct
Tools/ant_tools/: askapbuild.xml
Tools/askap-modules/: README.md  README.txt
Tools/askap-modules/aces-ops/: deploy.sh
Tools/askap-modules/modulefiles/: askap-cray  askapdata  askapsofthook  askaputils  askapvis  bbcp
Tools/cookiecutter_templates/sdp-service-template/: README.md  cookiecutter.json
Tools/scons_tools/: askapenv.py
Tools/virtualenv/: bootstrap.py
(+1763 files in other folders)
