#
# base/accessors/dataaccess
#
add_library(dataaccess OBJECT

BasicDataConverter.cc
BestWPlaneDataAccessor.cc
DataAccessError.cc
DataAccessorAdapter.cc
DataAccessorStub.cc
DataIteratorAdapter.cc
DataIteratorStub.cc
DirectionConverter.cc
DopplerConverter.cc
EpochConverter.cc
FakeSingleStepIterator.cc
FeedSubtableHandler.cc
FieldSubtableHandler.cc
IConstDataAccessor.cc
IConstDataIterator.cc
IConstDataSource.cc
IConverterBase.cc
IDataIterator.cc
IDataSelector.cc
IDataSource.cc
IHolder.cc
ITableMeasureFieldSelector.cc
MemAntennaSubtableHandler.cc
MemBufferDataAccessor.cc
MemTableDataDescHolder.cc
MemTablePolarisationHolder.cc
MemTableSpWindowHolder.cc
MetaDataAccessor.cc
MiscTableInfoHolder.cc
OnDemandBufferDataAccessor.cc
OnDemandNoiseAndFlagDA.cc
ParsetInterface.cc
SmearingAccessorAdapter.cc
SubtableInfoHolder.cc
TableBufferDataAccessor.cc
TableBufferManager.cc
TableConstDataAccessor.cc
TableConstDataIterator.cc
TableConstDataSource.cc
TableDataAccessor.cc
TableDataIterator.cc
TableDataSelector.cc
TableDataSource.cc
TableHolder.cc
TableInfoAccessor.cc
TableMeasureFieldSelector.cc
TableScalarFieldSelector.cc
TableTimeStampSelector.cc
TempUVWMachine.cc
TimeChunkIteratorAdapter.cc
TimeDependentSubtable.cc
UVWMachineCache.cc
UVWRotationHandler.cc
)

set_property(TARGET dataaccess PROPERTY POSITION_INDEPENDENT_CODE ON)

install (FILES

BasicDataConverter.h
BestWPlaneDataAccessor.h
CachedAccessorField.h
CachedAccessorField.tcc
DataAccessError.h
DataAccessorAdapter.h
DataAccessorStub.h
DataAdapter.h
DataIteratorAdapter.h
DataIteratorStub.h
DirectionConverter.h
DopplerConverter.h
EpochConverter.h
FakeSingleStepIterator.h
FeedSubtableHandler.h
FieldSubtableHandler.h
GenericConverter.h
IAntennaSubtableHandler.h
IBufferManager.h
IConstDataAccessor.h
IConstDataIterator.h
IConstDataSource.h
IConverterBase.h
IDataAccessor.h
IDataConverter.h
IDataConverterImpl.h
IDataIterator.h
IDataSelector.h
IDataSource.h
IDirectionConverter.h
IDopplerConverter.h
IEpochConverter.h
IFeedSubtableHandler.h
IFieldSubtableHandler.h
IFlagAndNoiseDataAccessor.h
IFlagDataAccessor.h
IHolder.h
IMiscTableInfoHolder.h
IPolSelector.h
ISubtableInfoHolder.h
ITableDataDescHolder.h
ITableDataSelectorImpl.h
ITableHolder.h
ITableInfoAccessor.h
ITableManager.h
ITableMeasureFieldSelector.h
ITablePolarisationHolder.h
ITableSpWindowHolder.h
ITimeDependentSubtable.h
MemAntennaSubtableHandler.h
MemBufferDataAccessor.h
MemTableDataDescHolder.h
MemTablePolarisationHolder.h
MemTableSpWindowHolder.h
MetaDataAccessor.h
MiscTableInfoHolder.h
OnDemandBufferDataAccessor.h
OnDemandNoiseAndFlagDA.h
ParsetInterface.h
ScratchBuffer.h
SharedIter.h
SmearingAccessorAdapter.h
SubtableInfoHolder.h
TableBufferDataAccessor.h
TableBufferManager.h
TableBufferManager.tcc
TableConstDataAccessor.h
TableConstDataIterator.h
TableConstDataSource.h
TableDataAccessor.h
TableDataIterator.h
TableDataSelector.h
TableDataSource.h
TableHolder.h
TableInfoAccessor.h
TableManager.h
TableMeasureFieldSelector.h
TableScalarFieldSelector.h
TableTimeStampSelector.h
TableTimeStampSelectorImpl.h
TableTimeStampSelectorImpl.tcc
TempUVWMachine.h
TimeChunkIteratorAdapter.h
TimeDependentSubtable.h
UVWMachineCache.h
UVWRotationHandler.h

DESTINATION include/askap/dataaccess
)

